--- a/addons/Popochiu/plugin.cfg
+++ b/addons/Popochiu/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="Popochiu"
 description="[en] Graphic adventure engine for Godot. [es] Motor para crear juegos de Aventura gráfica (point n' click)."
-author="carenalga (@mapedorr) \\\\(|:3)/"
+author="carenalga (@mapedorr) \\\(|:3)/"
 version="1.1"
 script="PopochiuPlugin.gd"
