Singleton A loads variables to access AudioCues
Progress on #21 .
This are the changes from 'popochiu-dev/new_audio_manager'.
AudioCueSound and AudioCueMusic scripts created to have different play() implementations based on the type of the AudioCue.

--- a/popochiu/PopochiuData.cfg
+++ b/popochiu/PopochiuData.cfg
@@ -20,3 +20,7 @@ TestA="res://popochiu/Dialogs/TestA/DialogTestA.tres"
 
 101="res://popochiu/Rooms/101/Room101.tres"
 Outside="res://popochiu/Rooms/Outside/RoomOutside.tres"
+
+[audio]
+
+sfx_cues=[ "res://popochiu/InventoryItems/ToyCar/SfxToyCar.tres" ]
