--- a/popochiu/PopochiuData.cfg
+++ b/popochiu/PopochiuData.cfg
@@ -20,3 +20,8 @@ TestA="res://popochiu/Dialogs/TestA/DialogTestA.tres"
 
 101="res://popochiu/Rooms/101/Room101.tres"
 Outside="res://popochiu/Rooms/Outside/RoomOutside.tres"
+
+[audio]
+
+sfx_cues=[ "res://popochiu/InventoryItems/ToyCar/SfxToyCar.tres" ]
+mx_cues=[ "res://popochiu/Rooms/101/audio/MxTwoPopochius.tres" ]
