--- a/popochiu/PopochiuData.cfg
+++ b/popochiu/PopochiuData.cfg
@@ -25,4 +25,4 @@ Outside="res://popochiu/Rooms/Outside/RoomOutside.tres"
 [audio]
 
 sfx_cues=[ "res://popochiu/InventoryItems/ToyCar/SfxToyCar.tres" ]
-mx_cues=[ "res://popochiu/Rooms/101/audio/MxTwoPopochius.tres" ]
+mx_cues=[ "res://popochiu/Rooms/101/audio/MxTwoPopochius.tres", "res://popochiu/Rooms/Outside/audio/MxBeachTime.tres" ]
