Fix on loading AudioCues
Fixed PopochiuRoomData assignation in popochiu.gd. This will require updating the creation scripts
Fixed missing Resource IDs for inventory.tscn and toolbar.tscn
Updated project .ico

--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -1,3 +1,11 @@
 [setup]
 
 done=true
+
+[rooms]
+
+CasinoInterior="res://popochiu/rooms/casino_interior/room_casino_interior.tres"
+
+[audio]
+
+mx_cues=["res://popochiu/rooms/casino_interior/audio/mx_house.tres"]
