Character creation working with new file naming
C singleton can trigger actions by character.
FIX: DialogText now sizes and displays the continue icon correctly (needs more testing).

--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -1,11 +1,17 @@
 [setup]
 
 done=true
+pc="Goddiu"
 
 [rooms]
 
 CasinoInterior="res://popochiu/rooms/casino_interior/room_casino_interior.tres"
+House="res://popochiu/rooms/house/room_house.tres"
 
 [audio]
 
 mx_cues=["res://popochiu/rooms/casino_interior/audio/mx_house.tres"]
+
+[characters]
+
+Goddiu="res://popochiu/characters/goddiu/character_goddiu.tres"
