Inventory item creation working again

--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -15,3 +15,7 @@ mx_cues=["res://popochiu/rooms/casino_interior/audio/mx_house.tres"]
 [characters]
 
 Goddiu="res://popochiu/characters/goddiu/character_goddiu.tres"
+
+[inventory_items]
+
+ToyCar="res://popochiu/inventory_items/toy_car/item_toy_car.tres"
