--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -15,7 +15,12 @@ mx_cues=["res://popochiu/rooms/casino_interior/audio/mx_house.tres"]
 [characters]
 
 Goddiu="res://popochiu/characters/goddiu/character_goddiu.tres"
+Popsy="res://popochiu/characters/popsy/character_popsy.tres"
 
 [inventory_items]
 
 ToyCar="res://popochiu/inventory_items/toy_car/item_toy_car.tres"
+
+[dialogs]
+
+ChatWithPopsy="res://popochiu/dialogs/chat_with_popsy/dialog_chat_with_popsy.tres"
