upd: separated scripts for inspector plugins
Replaced all the calls to snake and pascal case transforms by the new GDScript 2 String functions that does the same.

--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -11,6 +11,7 @@ House="res://popochiu/rooms/house/room_house.tres"
 [audio]
 
 mx_cues=["res://popochiu/rooms/casino_interior/audio/mx_house.tres"]
+sfx_cues=["res://popochiu/rooms/casino_interior/audio/sfx_blanket.tres", "res://popochiu/rooms/casino_interior/audio/sfx_door_close.tres", "res://popochiu/rooms/casino_interior/audio/sfx_key.tres", "res://popochiu/rooms/casino_interior/audio/sfx_toy_car.tres"]
 
 [characters]
 
