feat: usability updates in 1.10 now working
Added filter text field to tabs so devs can filter the content by row or group name.
New "Characters in room" group working in Room tab.
Fixed bug errors when trying to access PopochiuDock from creation popups before PopochiuDock is ready.

--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -17,6 +17,7 @@ sfx_cues=["res://popochiu/rooms/casino_interior/audio/sfx_blanket.tres", "res://
 
 Goddiu="res://popochiu/characters/goddiu/character_goddiu.tres"
 Popsy="res://popochiu/characters/popsy/character_popsy.tres"
+Trapusinsiu="res://popochiu/characters/trapusinsiu/character_trapusinsiu.tres"
 
 [inventory_items]
 
