--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
+# Addons other than Popochiu
+# (we use some for development)
+addons/**
+!addons/Popochiu
 
 # Godot-specific ignores
 .import/
 export.cfg
 export_presets.cfg
+.godot
+.godot/
 
 # Mono-specific ignores
 .mono/
 data_*/
-
-
-.godot
