--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -11,11 +11,13 @@ House="res://popochiu/rooms/house/room_house.tres"
 [audio]
 
 mx_cues=["res://popochiu/rooms/casino_interior/audio/mx_house.tres"]
+sfx_cues=["res://popochiu/rooms/casino_interior/audio/sfx_blanket.tres", "res://popochiu/rooms/casino_interior/audio/sfx_door_close.tres", "res://popochiu/rooms/casino_interior/audio/sfx_key.tres", "res://popochiu/rooms/casino_interior/audio/sfx_toy_car.tres"]
 
 [characters]
 
 Goddiu="res://popochiu/characters/goddiu/character_goddiu.tres"
 Popsy="res://popochiu/characters/popsy/character_popsy.tres"
+Trapusinsiu="res://popochiu/characters/trapusinsiu/character_trapusinsiu.tres"
 
 [inventory_items]
 
