--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Addons other than Popochiu
 # (we use some for development)
-addons/**
-!addons/Popochiu
+# addons/**
+# !addons/Popochiu
 
 # Godot-specific ignores
 .import/
