--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -3,15 +3,10 @@
 done=true
 pc="Goddiu"
 
-[rooms]
-
-CasinoInterior="res://popochiu/rooms/casino_interior/room_casino_interior.tres"
-House="res://popochiu/rooms/house/room_house.tres"
-
 [audio]
 
-mx_cues=["res://popochiu/rooms/casino_interior/audio/mx_house.tres"]
-sfx_cues=["res://popochiu/rooms/casino_interior/audio/sfx_blanket.tres", "res://popochiu/rooms/casino_interior/audio/sfx_door_close.tres", "res://popochiu/rooms/casino_interior/audio/sfx_key.tres", "res://popochiu/rooms/casino_interior/audio/sfx_toy_car.tres"]
+mx_cues=[]
+sfx_cues=[]
 
 [characters]
 
@@ -26,3 +21,7 @@ ToyCar="res://popochiu/inventory_items/toy_car/item_toy_car.tres"
 [dialogs]
 
 ChatWithPopsy="res://popochiu/dialogs/chat_with_popsy/dialog_chat_with_popsy.tres"
+
+[rooms]
+
+House="res://popochiu/rooms/house/room_house.tres"
