fix: #65 is now REALLY solved
I had forgotten to change `preload` by `load` when creating AudioCue variables in `a.gd`.
Added a music and a voice audio files to test.

--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -3,11 +3,6 @@
 done=true
 pc="Goddiu"
 
-[audio]
-
-mx_cues=[]
-sfx_cues=[]
-
 [characters]
 
 Goddiu="res://popochiu/characters/goddiu/character_goddiu.tres"
@@ -25,3 +20,8 @@ ChatWithPopsy="res://popochiu/dialogs/chat_with_popsy/dialog_chat_with_popsy.tre
 [rooms]
 
 House="res://popochiu/rooms/house/room_house.tres"
+
+[audio]
+
+mx_cues=["res://popochiu/rooms/house/audio/mx_house.tres"]
+vo_cues=["res://popochiu/characters/goddiu/audio/vo_goddiu_01.tres"]
