fix: #48 with a better int validation
Now the `.is_valid_int()` function is used to validate if a game object name starts with a number in order to prepend its type name when creating its variable in its corresponding autoload.

--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -8,6 +8,7 @@ pc="Goddiu"
 Goddiu="res://popochiu/characters/goddiu/character_goddiu.tres"
 Popsy="res://popochiu/characters/popsy/character_popsy.tres"
 Trapusinsiu="res://popochiu/characters/trapusinsiu/character_trapusinsiu.tres"
+01="res://popochiu/characters/01/character_01.tres"
 
 [inventory_items]
 
