--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -3,21 +3,12 @@
 done=true
 pc="Goddiu"
 
-[rooms]
-
-CasinoInterior="res://popochiu/rooms/casino_interior/room_casino_interior.tres"
-House="res://popochiu/rooms/house/room_house.tres"
-
-[audio]
-
-mx_cues=["res://popochiu/rooms/casino_interior/audio/mx_house.tres"]
-sfx_cues=["res://popochiu/rooms/casino_interior/audio/sfx_blanket.tres", "res://popochiu/rooms/casino_interior/audio/sfx_door_close.tres", "res://popochiu/rooms/casino_interior/audio/sfx_key.tres", "res://popochiu/rooms/casino_interior/audio/sfx_toy_car.tres"]
-
 [characters]
 
 Goddiu="res://popochiu/characters/goddiu/character_goddiu.tres"
 Popsy="res://popochiu/characters/popsy/character_popsy.tres"
 Trapusinsiu="res://popochiu/characters/trapusinsiu/character_trapusinsiu.tres"
+01="res://popochiu/characters/01/character_01.tres"
 
 [inventory_items]
 
@@ -26,3 +17,12 @@ ToyCar="res://popochiu/inventory_items/toy_car/item_toy_car.tres"
 [dialogs]
 
 ChatWithPopsy="res://popochiu/dialogs/chat_with_popsy/dialog_chat_with_popsy.tres"
+
+[rooms]
+
+House="res://popochiu/rooms/house/room_house.tres"
+
+[audio]
+
+mx_cues=["res://popochiu/rooms/house/audio/mx_house.tres"]
+vo_cues=["res://popochiu/characters/goddiu/audio/vo_goddiu_01.tres"]
