--- a/addons/popochiu/plugin.cfg
+++ b/addons/popochiu/plugin.cfg
@@ -1,7 +1,8 @@
 [plugin]
 
 name="Popochiu"
-description="[en] Graphic adventure engine for Godot. [es] Motor para crear juegos de Aventura gráfica (point n' click)."
+description="[en] Point n' click games engine for Godot.
+[es] Motor para crear juegos de aventura gráfica en Godot."
 author="carenalga (@mapedorr) \\(|:3)/"
-version="2.0.0"
+version="2.0.0-alpha_3"
 script="popochiu_plugin.gd"
