--- a/popochiu/popochiu_data.cfg
+++ b/popochiu/popochiu_data.cfg
@@ -25,4 +25,5 @@ House="res://popochiu/rooms/house/room_house.tres"
 [audio]
 
 mx_cues=["res://popochiu/rooms/house/audio/mx_house.tres"]
-vo_cues=["res://popochiu/characters/goddiu/audio/vo_goddiu_01.tres"]
+vo_cues=["res://popochiu/characters/goddiu/audio/vo_goddiu_01.tres", "res://popochiu/characters/goddiu/audio/vo_goddiu_02.tres", "res://popochiu/characters/goddiu/audio/vo_goddiu_03.tres"]
+sfx_cues=["res://popochiu/rooms/house/audio/sfx_astral_plane.tres", "res://popochiu/rooms/house/audio/sfx_blanket.tres", "res://popochiu/rooms/house/audio/sfx_door_close.tres", "res://popochiu/rooms/house/audio/sfx_door_open.tres", "res://popochiu/rooms/house/audio/sfx_drawer_close.tres", "res://popochiu/rooms/house/audio/sfx_drawer_open.tres", "res://popochiu/rooms/house/audio/sfx_key.tres", "res://popochiu/rooms/house/audio/sfx_toy_car.tres", "res://popochiu/rooms/house/audio/sfx_window.tres"]
