--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,6 +1,8 @@
 site_name: Popochiu
-theme: readthedocs
+theme: alabaster_theme
 extra_css:
   - _assets/css/custom.css
 extra_javascript:
   - _assets/js/custom.js
+markdown_extensions:
+  - admonition
