refs #147: Finalized the local environment, plus added README file to execute it locally on Windows, Mac and Linux.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 version: "3"
 services:
-    mkdocs:
+    documentation:
+        ports:
+            - 286:80
         volumes:
             - ./docs:/app
         working_dir: /app
         labels:
-            - com.dnsdock.alias=docs.popochiu.loc
+            - com.dnsdock.alias=docs.popochiu.local
         build:
             context: .
             dockerfile: Dockerfile
