refs #147: WIP on a custom docker image for GDQuest's gdscript-docs-maker.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ popochiu
 popochiu/**
 game
 game/**
+
+# Documentation ignores
+docs/**/*.import
+Collector*.gd
+ReferenceCollectorCLI*.gd
+reference.json
