refs #147: A first version of the Code Reference generator is now working. Docs README explains how to use it.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ game/**
 
 # Documentation ignores
 docs/**/*.import
+docs/**/scripting-reference/*.md
+!docs/**/scripting-reference/index.md
 Collector*.gd
 ReferenceCollectorCLI*.gd
 reference.json
