refs #147: Code docblocks exporter (#156)
* refs #147: WIP on a custom docker image for GDQuest's gdscript-docs-maker.

* refs #147: wip on the dockerfile for reference generator.

* refs #147: A first version of the Code Reference generator is now working. Docs README explains how to use it.

* refs #147: GDScript codeblocks are now highlighted in documentation site. Added support for ancillary languages that may come in handy (md, bash, yaml, json, dockerfile, makefile).

* refs #147: Fixed typo in docs REAME.md file.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,11 @@ popochiu
 popochiu/**
 game
 game/**
+
+# Documentation ignores
+docs/**/*.import
+docs/**/scripting-reference/*.md
+!docs/**/scripting-reference/index.md
+Collector*.gd
+ReferenceCollectorCLI*.gd
+reference.json
