--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Popochiu
 repo_url: https://github.com/carenalgas/popochiu/
 extra_css:
-  - _assets/css/custom.css
+  - assets/css/custom.css
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/tomorrow-night-bright.min.css
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js
@@ -11,8 +11,8 @@ extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/json.min.js
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/dockerfile.min.js
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/makefile.min.js
-  - _assets/js/gdscript.min.js
-  - _assets/js/custom.js
+  - assets/js/gdscript.min.js
+  - assets/js/custom.js
 markdown_extensions:
   - admonition
 plugins:
