refs #147: Specified permissions, renamed job for better readability. Running another test.

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -14,8 +14,10 @@ on:
       - feature/147-docs-release-automation
 
 jobs:
-  deploy:
+  deploy-gh-pages:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v2
       - name: Install Python environment
