refs #147: The gh pages deploy workflow triggers are now related to the actual release, not pushes on testing branch.

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,17 +1,12 @@
 name: Publish updated documentation
 
-# on:
-#   push:
-#     tags:
-#       - "v*.*.*"
-#       - "v*.*.*-alpha*"
-#       - "v*.*.*-beta*"
-#       - "v*.*.*-rc*"
-
 on:
   push:
-    branches:
-      - feature/147-docs-release-automation
+    tags:
+      - "v*.*.*"
+      - "v*.*.*-alpha*"
+      - "v*.*.*-beta*"
+      - "v*.*.*-rc*"
 
 jobs:
   deploy-gh-pages:
