refs #232: gizmo buttons visibility refactor (WIP).

--- a/addons/popochiu/editor/gizmos/plugin.cfg
+++ b/addons/popochiu/editor/gizmos/plugin.cfg
@@ -1,6 +1,6 @@
 [plugin]
 
-name="GizmoClickable"
+name="PopochiuGizmoClickable"
 description="Provides viewport-drawn interactive 2D gizmos to Popochiu objects in the editor."
 author="Carenalgas Dev Team"
 version="2.0"
