--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -78,10 +78,10 @@ jobs:
           pygments
           pymdown-extensions
           fontawesome-markdown
-      - name: Find fontawesome-markdown package location
-        run: pip show fontawesome-markdown
+      - name: Find fontawesome-markdown package location and save it in an environment variable
+        run: echo ::set-env name=FONTAWESOME_MARKDOWN_PATH::$(pip show fontawesome-markdown | grep Location | cut -d ' ' -f 2)
       - name: Patch fontawesome-markdown to support Markdown 3.4+
-        run: cp -f ./docs/patches/fontawesome_markdown/*.py /usr/lib/python${{ env.PYTHON_VERSION }}/site-packages/fontawesome_markdown
+        run: cp -f ./docs/patches/fontawesome_markdown/*.py ${{ env.FONTAWESOME_MARKDOWN_PATH }}/fontawesome_markdown/
       - name: Build DocsExtractor Docker image
         working-directory: ./docs
         run: docker build -f Dockerfile.DocsExtractor -t ${{ env.GDE_TAG }} .
