--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -28,6 +28,8 @@ extra_javascript:
 markdown_extensions:
   - admonition
   - attr_list
+  - fontawesome_in_markdown
 plugins:
   - search
   - mkdocs-nav-weight
+  - mermaid2
