refs #287: Fix docs deployment (#302)
* refs #287: Old wiki images cleanup. We will take them back in as we go with the actual new docs.

* refs #287: Cleanup of useless import files. Docs folder ignored by Godot (improves project loaded times).

* refs #287: Git workflow reworked to support fontawesome and mermaid packages, plus docblocks extraction.

* refs #287: Changed the wf trigger to something I can try actually test.

* refs #287: WIP on the workflow.

* refs #287: WIP on the workflow - added fontawesome-markdown location finder.

* refs #287: Reverted commit 9ed65b1 to reintroduce fontawesome and mermaid support, based on new self-published python package. Automation updated accordingly.

* refs #287: Added tentative setuptools dependency.

* refs #287: Workflow builds do not happen in interactive TTYs...

* refs #287: Complete docker command to run the docs extractor.

* refs #287: More work on the docker command.

* refs #287: More work on the docker command.

* refs #287: Restored the correct build triggers.

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -8,6 +8,10 @@ on:
       - "v*.*.*-beta*"
       - "v*.*.*-rc*"
 
+env:
+  PYTHON_VERSION: 3.12
+  GDE_TAG: godot-docs-extractor
+
 jobs:
   deploy-gh-pages:
     runs-on: ubuntu-latest
@@ -18,7 +22,7 @@ jobs:
       - name: Install Python environment
         uses: actions/setup-python@v2
         with:
-          python-version: 3.11
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Install MkDocs and dependencies
         run: >
           pip install
@@ -67,10 +71,25 @@ jobs:
           mkdocs-cinder
           mkdocs-kpn
           mkdocs-material
+          mkdocs-mermaid2-plugin
+          fontawesome-in-markdown
           neoteroi-mkdocs
           markdown-include
           pygments
           pymdown-extensions
+      - name: Build DocsExtractor Docker image
+        working-directory: ./docs
+        run: docker build -f Dockerfile.DocsExtractor -t ${{ env.GDE_TAG }} .
+      - name: Extract code reference documentation from Godot source
+        run: > 
+          docker run
+          --rm
+          -v ${{ github.workspace }}:/project
+          -v ${{ github.workspace }}/docs/src/the-engine-handbook/scripting-reference:/output
+          ${{ env.GDE_TAG }}
+          /project
+          -o /output
+          -d addons/popochiu/engine
       - name: Deploy to production
         working-directory: ./docs
         run: mkdocs gh-deploy --force --clean --verbose
