refs #371: added support for definition lists to markdown.

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -29,6 +29,7 @@ markdown_extensions:
   - admonition
   - attr_list
   - fontawesome_in_markdown
+  - def_list
 plugins:
   - search
   - mkdocs-nav-weight
